force-app/main/default/objects/crms14__Company__c/fields/crms14__Accounts_AR_Day__c.field-meta.xml
<CustomField>
    <fullName>crms14__Accounts_AR_Day__c</fullName>
    <inlineHelpText>The Accounting Reference Date (ARD) day.</inlineHelpText>
    <label>Accounts AR Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>