force-app/main/default/objects/crms14__Company__c/fields/crms14__Accounts_Last_Period_Start_On__c.field-meta.xml
<CustomField>
    <fullName>crms14__Accounts_Last_Period_Start_On__c</fullName>
    <label>Accounts Last Period Start On</label>
    <type>Date</type>
</CustomField>