force-app/main/default/objects/crms14__Company__c/fields/crms14__Accounts_Overdue__c.field-meta.xml
<CustomField>
    <fullName>crms14__Accounts_Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Accounts are overdue, as provided by Companies House</inlineHelpText>
    <label>Accounts Overdue</label>
    <type>Checkbox</type>
</CustomField>