force-app/main/default/objects/crms14__Company__c/fields/crms14__Annual_Return_Last_Made_Up_To__c.field-meta.xml
<CustomField>
    <fullName>crms14__Annual_Return_Last_Made_Up_To__c</fullName>
    <label>Annual Return Last Made Up To</label>
    <type>Date</type>
</CustomField>