force-app/main/default/objects/crms14__Company__c/fields/crms14__Annual_Return_Next_Due__c.field-meta.xml
<CustomField>
    <fullName>crms14__Annual_Return_Next_Due__c</fullName>
    <label>Annual Return Next Due</label>
    <type>Date</type>
</CustomField>