force-app/main/default/objects/crms14__Company__c/fields/crms14__Annual_Return_Overdue__c.field-meta.xml
<CustomField>
    <fullName>crms14__Annual_Return_Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annual Return Overdue</label>
    <type>Checkbox</type>
</CustomField>