force-app/main/default/objects/crms14__Company__c/fields/crms14__BC_Business_Activity__c.field-meta.xml
<CustomField>
    <fullName>crms14__BC_Business_Activity__c</fullName>
    <label>BC Business Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>