force-app/main/default/objects/crms14__Company__c/fields/crms14__BC_Parent_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>crms14__BC_Parent_Company_Name__c</fullName>
    <inlineHelpText>Parent company name. (BC: Branch Company)</inlineHelpText>
    <label>BC Parent Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>