force-app/main/default/objects/crms14__Company__c/fields/crms14__BC_Parent_Company_Number__c.field-meta.xml
<CustomField>
    <fullName>crms14__BC_Parent_Company_Number__c</fullName>
    <inlineHelpText>Parent company number. (BC: Branch Company)</inlineHelpText>
    <label>BC Parent Company Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>