force-app/main/default/objects/crms14__Company__c/fields/crms14__Business_Activity_branch__c.field-meta.xml
<CustomField>
    <fullName>crms14__Business_Activity_branch__c</fullName>
    <label>Business Activity (Branch)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>