force-app/main/default/objects/crms14__Company__c/fields/crms14__Charges__c.field-meta.xml
<CustomField>
    <fullName>crms14__Charges__c</fullName>
    <label>Charges</label>
    <type>Url</type>
</CustomField>