force-app/main/default/objects/crms14__Company__c/fields/crms14__Company_can_file__c.field-meta.xml
<CustomField>
    <fullName>crms14__Company_can_file__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This indicates whether this company can file.</inlineHelpText>
    <label>Company Can File</label>
    <type>Checkbox</type>
</CustomField>