force-app/main/default/objects/crms14__Company__c/fields/crms14__Company_Created_By_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>crms14__Company_Created_By_Monitoring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Created By Monitoring</label>
    <type>Checkbox</type>
</CustomField>