force-app/main/default/objects/crms14__Company__c/fields/crms14__Company_Status_Detail__c.field-meta.xml
<CustomField>
    <fullName>crms14__Company_Status_Detail__c</fullName>
    <inlineHelpText>Company Status Detail as reported by Companies House</inlineHelpText>
    <label>Company Status Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>