force-app/main/default/objects/crms14__Company__c/fields/crms14__CS_Last_Made_Up_To__c.field-meta.xml
<CustomField>
    <fullName>crms14__CS_Last_Made_Up_To__c</fullName>
    <inlineHelpText>The date to which the company last made a confirmation statement.</inlineHelpText>
    <label>CS Last Made Up To</label>
    <type>Date</type>
</CustomField>