force-app/main/default/objects/crms14__Company__c/fields/crms14__CS_Next_Made_Up_To__c.field-meta.xml
<CustomField>
    <fullName>crms14__CS_Next_Made_Up_To__c</fullName>
    <label>CS Next Made Up To</label>
    <type>Date</type>
</CustomField>