force-app/main/default/objects/crms14__Company__c/fields/crms14__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>crms14__Error_Message__c</fullName>
    <description>This field stores the error message for records that encounter an error during processing by the CompanyInfoSyncQueueable class when the &quot;Sync All Companies&quot; button is used. It captures the error details for each failed record.</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>