force-app/main/default/objects/crms14__Company__c/fields/crms14__Exemptions__c.field-meta.xml
<CustomField>
    <fullName>crms14__Exemptions__c</fullName>
    <label>Exemptions</label>
    <type>Url</type>
</CustomField>