force-app/main/default/objects/crms14__Company__c/fields/crms14__Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>crms14__Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>