force-app/main/default/objects/crms14__Company__c/fields/crms14__External_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>crms14__External_Registration_Number__c</fullName>
    <label>External Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>