force-app/main/default/objects/crms14__Company__c/fields/crms14__Filing_History__c.field-meta.xml
<CustomField>
    <fullName>crms14__Filing_History__c</fullName>
    <label>Filing History</label>
    <type>Url</type>
</CustomField>