force-app/main/default/objects/crms14__Company__c/fields/crms14__Has_Super_Secure_PSCS__c.field-meta.xml
<CustomField>
    <fullName>crms14__Has_Super_Secure_PSCS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>It indicates whether a company has super-secure Persons with Significant Control (PSCs). 
Super-secure PSCs are individuals who have significant control over a company and whose details are protected for security reasons.</inlineHelpText>
    <label>Has Super Secure PSCs</label>
    <type>Checkbox</type>
</CustomField>