force-app/main/default/objects/crms14__Company__c/fields/crms14__Incorporation_Date__c.field-meta.xml
<CustomField>
    <fullName>crms14__Incorporation_Date__c</fullName>
    <inlineHelpText>The date this organisation was created.</inlineHelpText>
    <label>Incorporation Date</label>
    <type>Date</type>
</CustomField>