force-app/main/default/objects/crms14__Company__c/fields/crms14__Insolvency__c.field-meta.xml
<CustomField>
    <fullName>crms14__Insolvency__c</fullName>
    <label>Insolvency</label>
    <type>Url</type>
</CustomField>