force-app/main/default/objects/crms14__Company__c/fields/crms14__Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>crms14__Jurisdiction__c</fullName>
    <label>Jurisdiction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>