force-app/main/default/objects/crms14__Company__c/fields/crms14__Last_Full_Members_List_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>crms14__Last_Full_Members_List_Updated_Date__c</fullName>
    <label>Last Full Members List Updated Date</label>
    <type>Date</type>
</CustomField>