force-app/main/default/objects/crms14__Company__c/fields/crms14__Last_Refreshed__c.field-meta.xml
<CustomField>
    <fullName>crms14__Last_Refreshed__c</fullName>
    <inlineHelpText>The date/time that the Companies House data on this record was last refreshed.</inlineHelpText>
    <label>Last Refreshed</label>
    <type>DateTime</type>
</CustomField>