force-app/main/default/objects/crms14__Company__c/fields/crms14__Manual_Upload__c.field-meta.xml
<CustomField>
    <fullName>crms14__Manual_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox field is used in the CompanyInfoSyncQueueable class when the &quot;Sync All Companies&quot; button is triggered. Records selected for processing in this class are identified by this field being checked. After processing, the ResetCompanyUpdateFlagBatch class unchecks this field to reset its state.</description>
    <label>Manual Upload</label>
    <type>Checkbox</type>
</CustomField>