force-app/main/default/objects/crms14__Company__c/fields/crms14__Officer_Count__c.field-meta.xml
<CustomField>
    <fullName>crms14__Officer_Count__c</fullName>
    <label>Officer Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>