force-app/main/default/objects/crms14__Company__c/fields/crms14__Officers__c.field-meta.xml
<CustomField>
    <fullName>crms14__Officers__c</fullName>
    <label>Officers</label>
    <type>Url</type>
</CustomField>