force-app/main/default/objects/crms14__Company__c/fields/crms14__Overseas__c.field-meta.xml
<CustomField>
    <fullName>crms14__Overseas__c</fullName>
    <label>Overseas</label>
    <type>Url</type>
</CustomField>