force-app/main/default/objects/crms14__Company__c/fields/crms14__Partia_Data_Available__c.field-meta.xml
<CustomField>
    <fullName>crms14__Partia_Data_Available__c</fullName>
    <label>Partial Data Available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>