force-app/main/default/objects/crms14__Company__c/fields/crms14__Persons_With_SCS__c.field-meta.xml
<CustomField>
    <fullName>crms14__Persons_With_SCS__c</fullName>
    <inlineHelpText>The URL of the persons with significant control statements list resource.</inlineHelpText>
    <label>Persons with SCS</label>
    <type>Url</type>
</CustomField>