force-app/main/default/objects/crms14__Company__c/fields/crms14__Persons_With_Significant_Control__c.field-meta.xml
<CustomField>
    <fullName>crms14__Persons_With_Significant_Control__c</fullName>
    <inlineHelpText>The URL of the persons with significant control list resource.</inlineHelpText>
    <label>Persons with Significant Control</label>
    <type>Url</type>
</CustomField>