force-app/main/default/objects/crms14__Company__c/fields/crms14__Registered_Office_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>crms14__Registered_Office_Postal_Code__c</fullName>
    <label>Registered Office Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>