force-app/main/default/objects/crms14__Company__c/fields/crms14__Registers__c.field-meta.xml
<CustomField>
    <fullName>crms14__Registers__c</fullName>
    <label>Registers</label>
    <type>Url</type>
</CustomField>