force-app/main/default/objects/crms14__Company__c/fields/crms14__Satisfied_Charges__c.field-meta.xml
<CustomField>
    <fullName>crms14__Satisfied_Charges__c</fullName>
    <label>Satisfied Charges</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>