force-app/main/default/objects/crms14__Company__c/fields/crms14__Self__c.field-meta.xml
<CustomField>
    <fullName>crms14__Self__c</fullName>
    <label>Self</label>
    <type>Url</type>
</CustomField>