force-app/main/default/objects/crms14__Company__c/fields/crms14__Service_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>crms14__Service_Address_Line_2__c</fullName>
    <label>Service Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>