force-app/main/default/objects/crms14__Company__c/fields/crms14__Service_Locality__c.field-meta.xml
<CustomField>
    <fullName>crms14__Service_Locality__c</fullName>
    <label>Service Locality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>