force-app/main/default/objects/crms14__Company__c/fields/crms14__Service_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>crms14__Service_Postal_Code__c</fullName>
    <label>Service Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>