force-app/main/default/objects/crms14__Company__c/fields/crms14__Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>crms14__Sub_Type__c</fullName>
    <label>Sub Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>