force-app/main/default/objects/crms14__Company__c/fields/crms14__Sync_Now__c.field-meta.xml
<CustomField>
    <fullName>crms14__Sync_Now__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Now</label>
    <type>Checkbox</type>
</CustomField>