force-app/main/default/objects/crms14__Company__c/fields/crms14__Total_Super_Secure_Managing_Officers__c.field-meta.xml
<CustomField>
    <fullName>crms14__Total_Super_Secure_Managing_Officers__c</fullName>
    <label>Total Super Secure Managing Officers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>