force-app/main/default/objects/crms14__Company__c/fields/crms14__Uk_Establishments__c.field-meta.xml
<CustomField>
    <fullName>crms14__Uk_Establishments__c</fullName>
    <label>UK-Establishments</label>
    <type>Url</type>
</CustomField>