force-app/main/default/objects/crms14__Company__c/fields/crms14__Undeliverable_Registered_Office_Address__c.field-meta.xml
<CustomField>
    <fullName>crms14__Undeliverable_Registered_Office_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This indicates whether post can be delivered to the registered office.</inlineHelpText>
    <label>Undeliverable Registered Office Address</label>
    <type>Checkbox</type>
</CustomField>