force-app/main/default/objects/crms14__Company__c/listViews/crms14__All_Companies.listView-meta.xml
<ListView>
    <fullName>crms14__All_Companies</fullName>
    <columns>NAME</columns>
    <columns>crms14__Registration_Number__c</columns>
    <columns>crms14__Company_Status__c</columns>
    <columns>crms14__Type__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Companies</label>
</ListView>